--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script:
   - git clone https://github.com/tomjridge/impfs_base_docker_image.git
   - make -C impfs_base_docker_image/ubuntu_16.04_with_ocaml_4.06
   - make -C impfs_base_docker_image/impfs_base_docker_image
-  - docker build --tag myimage ./.dockerfile
+  - make -C .dockerfile
 
 after_script:
   - docker images
