--- a/.dockerfile/Dockerfile.from_github
+++ b/.dockerfile/Dockerfile.from_github
@@ -14,7 +14,7 @@ RUN eval `opam config env` && make -C tjr_monad build && make -C tjr_monad insta
 RUN git clone https://github.com/tomjridge/tjr_fs_shared.git 
 RUN eval `opam config env` && make -C tjr_fs_shared build && make -C tjr_fs_shared install
 
-RUN git clone https://github.com/tomjridge/tjr_btree.git
+RUN git clone -b dev https://github.com/tomjridge/tjr_btree.git
 RUN eval `opam config env` && make -C tjr_btree build && make -C tjr_btree install
 
 RUN git clone https://github.com/tomjridge/tjr_pcache.git
