--- a/src/dune
+++ b/src/dune
@@ -3,5 +3,5 @@
   (public_name tjr_pcache)
   (preprocess (pps ppx_deriving_yojson))
   (flags (:standard "-w" "-27-39"))  ; -27 is unused var, -39 is unused rec flag
-  (libraries tjr_lib tjr_fs_shared tjr_monad tjr_btree yojson ppx_deriving_yojson)
+  (libraries tjr_lib tjr_fs_shared tjr_monad yojson ppx_deriving_yojson)
 )
