--- a/.dockerfile/Dockerfile.test
+++ b/.dockerfile/Dockerfile.test
@@ -1,3 +1,3 @@
 FROM tjr_pcache_docker_image_from_github
 
-RUN eval `opam config env` && make -C tjr_pcache check
+RUN eval `opam config env` && make -C tjr_pcache run_tests
