--- a/tjr_pcache.opam
+++ b/tjr_pcache.opam
@@ -1,10 +1,13 @@
-opam-version: "1.2"
+opam-version: "2.0"
 name: "tjr_pcache"
 version: "0.0.1" # version should match a VERSION file in this dir?
 
 # ----------------------------------------------------------------------
 
+authors: "Tom Ridge <tom.j.ridge@googlemail.com>"
 maintainer: "Tom Ridge <tom.j.ridge@googlemail.com>"
+homepage: "https://github.com/tomjridge/tjr_pcache"
+bug-reports: "https://github.com/tomjridge/tjr_pcache/issues"
 
 # ----------------------------------------------------------------------
 
@@ -17,9 +20,7 @@ depends: [
   "tjr_polymap"
 ]
 
-
 # ----------------------------------------------------------------------
-
 
 build: [
 #  ["dune" "subst"] {pinned}
