--- a/src/dune
+++ b/src/dune
@@ -1,7 +1,7 @@
 (library
   (name tjr_pcache)
   (public_name tjr_pcache)
-  (preprocess (pps ppx_deriving_yojson))
+  (preprocess (pps ppx_deriving_yojson ppx_bin_prot))
   (flags (:standard "-w" "-27-39"))  ; -27 is unused var, -39 is unused rec flag
   (libraries tjr_lib_core tjr_lib tjr_polymap tjr_fs_shared tjr_monad yojson ppx_deriving_yojson)
 )
