--- a/src/dune
+++ b/src/dune
@@ -3,7 +3,7 @@
   (public_name tjr_pcache)
   (preprocess (pps ppx_deriving_yojson ppx_bin_prot))
   (flags (:standard "-w" "-27-39"))  ; -27 is unused var, -39 is unused rec flag
-  (libraries tjr_lib_core tjr_lib tjr_polymap tjr_fs_shared tjr_monad yojson ppx_deriving_yojson)
+  (libraries tjr_monad tjr_fs_shared yojson ppx_deriving_yojson)
 )
 
 (include_subdirs unqualified)
