wip; doesn't compile

--- a/.old/Makefile
+++ b/.old/Makefile
@@ -1,24 +1,40 @@
-SHELL:=bash
+DUNE:=dune
 
 build:
-	$(MAKE) -C src build
-
-
-# NOTE must install before building bin
-build_bin:
-	$(MAKE) -C bin build
+	$(DUNE) build @install
+	$(DUNE) build bin/run_dmap_tests.exe
+	$(DUNE) build bin/run_dmap_example.exe
+#	$(DUNE) build bin/test_dcl.exe
+#	$(DUNE) build @all #tjr_pcache_test
+#	$(DUNE) build bin/run_tests.exe bin/test_dcl.exe
 
 install:
-	$(MAKE) -C src install
-
-uninstall:
-	$(MAKE) -C src uninstall
+	$(DUNE) install
 
 clean:
-	$(MAKE) -C src clean
-	$(MAKE) -C bin clean
+	$(DUNE) clean
+	rm -f dune-project tjr_pcache.install # FIXME?
+	rm -f dmap_example.store # test file
+
+doc: FORCE
+	$(DUNE) build @doc
+	rm -rf /tmp/tjr_pcache
+	cp -R _build/default/_doc/_html /tmp/tjr_pcache  # so we don't lose it on clean
+
+view_doc:
+	google-chrome  _build/default/_doc/_html/index.html
+
 
 run_tests:
-	$(MAKE) -C bin
-	$(MAKE) -C bin run_tests
+	$(DUNE) exec bin/run_dmap_tests.exe
+	$(DUNE) exec bin/run_dmap_example.exe 100000
+#	$(DUNE) exec bin/run_tests.exe
+#	$(DUNE) exec bin/test_dcl.exe
 
+# 
+# run_more_tests:
+# 	$(DUNE) exec test/test_main.exe 1 10
+
+
+
+FORCE:
