--- a/example/dune
+++ b/example/dune
@@ -1,5 +1,5 @@
 (executable
-  (name dmap_example)
+  (name run_dmap_example)
   (preprocess (pps ppx_bin_prot))
   (flags (:standard  -open Tjr_monad -open Tjr_lib -open Tjr_fs_shared -open Tjr_pcache )) 
-  (libraries tjr_pcache bin_prot ppx_bin_prot))
+  (libraries tjr_pcache bin_prot ppx_bin_prot core))
