--- a/src-example/dune
+++ b/src-example/dune
@@ -2,5 +2,5 @@
   (name tjr_pcache_example)
   (public_name tjr_pcache_example)
   (preprocess (pps ppx_bin_prot ppx_deriving_yojson))
-  (flags (:standard  -open Tjr_monad -open Tjr_lib -open Tjr_profile -open Tjr_fs_shared -open Tjr_pcache )) 
+  (flags (:standard  -open Tjr_monad -open Tjr_lib -open Tjr_fs_shared -open Tjr_pcache )) 
   (libraries tjr_pcache bin_prot ppx_bin_prot core tjr_profile ))
