--- a/bin/dune
+++ b/bin/dune
@@ -4,8 +4,8 @@
 ;   (libraries tjr_pcache core))
 
 
-(executable
-  (name run_dmap_example)
+(executables
+  (names run_dmap_example run_tests)
   (preprocess (pps ppx_bin_prot ppx_deriving_yojson))
-  (flags (:standard  -open Tjr_monad -open Tjr_lib -open Tjr_profile -open Tjr_fs_shared -open Tjr_pcache -open Tjr_pcache_example )) 
-  (libraries tjr_profile tjr_pcache_example))
+  (flags (:standard  -open Tjr_monad -open Tjr_lib -open Tjr_profile -open Tjr_fs_shared -open Tjr_pcache -open Tjr_pcache_example -open Tjr_pcache_test )) 
+  (libraries tjr_profile tjr_pcache_example tjr_pcache_test alcotest))
