--- a/tjr_pcache.opam
+++ b/tjr_pcache.opam
@@ -14,9 +14,13 @@ dev-repo     : "git+https://github.com/tomjridge/tjr_pcache.git"
 # ----------------------------------------------------------------------
 
 depends: [
-  "yojson"
+  # for test and examples
   "ppx_deriving_yojson"
-  "ppx_bin_prot"
+  "alcotest" 
+  "core" # could be more fine-grained about deps
+  
+  # for main lib
+  "ppx_optcomp"
   "tjr_fs_shared"
 ]
 
