--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,4 @@ services:
   - docker
 
 script:
-  - git clone https://github.com/tomjridge/impfs_base_docker_image.git
-  - make -C impfs_base_docker_image/ubuntu_18.04_with_ocaml_4.06_opam_2
-  - make -C impfs_base_docker_image/impfs_base_docker_image
-  - make -C .dockerfile
-
-after_script:
-  - docker images
+  - docker build .
