WIP; compiles but some tests need to be resurrected

--- a/src-test/dune
+++ b/src-test/dune
@@ -2,6 +2,6 @@
   (name tjr_pcache_test)
   (public_name tjr_pcache_test)
   (preprocess (pps ppx_deriving_yojson ppx_jane))
-  (flags (:standard  -open Tjr_monad -open Tjr_lib -open Tjr_fs_shared -open Tjr_pcache -open Tjr_pcache.Pcache_intf )) 
-  (libraries tjr_pcache core alcotest)
+  (flags (:standard  -open Tjr_monad -open Tjr_lib -open Tjr_fs_shared -open Tjr_pcache -open Tjr_pcache.Pcache_intf -open Tjr_pcache_example )) 
+  (libraries tjr_pcache_example core alcotest)
 )
