--- a/src-example/dune
+++ b/src-example/dune
@@ -2,5 +2,5 @@
   (name tjr_pcache_example)
   (public_name tjr_pcache_example)
   (preprocess (pps ppx_jane ppx_deriving_yojson))
-  (flags (:standard  -open Tjr_monad -open Tjr_lib -open Tjr_fs_shared -open Tjr_pcache )) 
+  (flags (:standard  -open Tjr_monad -open Tjr_lib -open Tjr_fs_shared -open Tjr_pcache -open Tjr_pcache.Pcache_intf )) 
   (libraries tjr_pcache ppx_jane core ))
