--- a/tjr_pcache_test.opam
+++ b/tjr_pcache_test.opam
@@ -15,6 +15,7 @@ dev-repo    : "git+https://github.com/tomjridge/tjr_pcache.git"
 
 depends: [
   "tjr_pcache"
+  "tjr_pcache_example"
   "core"
 ]
 
