--- a/src-example/dune
+++ b/src-example/dune
@@ -1,6 +1,6 @@
 (library
-  (name tjr_pcache_example)
-  (public_name tjr_pcache_example)
+  (name tjr_pcache_examples)
+  (public_name tjr_pcache_examples)
   (preprocess (pps ppx_jane ppx_deriving_yojson))
   (flags (:standard  -open Tjr_monad -open Tjr_lib -open Tjr_fs_shared -open Tjr_pcache -open Tjr_pcache.Pcache_intf )) 
   (libraries tjr_pcache ppx_jane core ppx_deriving_yojson ))
